--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 
 
   <!-- Fonts and Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Montserrat:wght@400;600&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/a7455e0873.js" crossorigin="anonymous"></script>
 
@@ -62,14 +60,18 @@
       <header>
         <div class="row p-3">
 
-          <!-- Rose Picture Background -->
+          <!-- Geometric Background -->
           <div class="col-12 header-bg d-flex justify-content-center align-items-center">
 
             <!-- Intro -->
             <div class="intro">
               <h3>Hi, I'm</h3>
               <h1>Jill Tyburski</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum ex non euismod commodo. Ut et tincidunt elit. Nam dapibus, lorem eget tempor ultrices, ligula risus sollicitudin purus, quis vehicula ante ligula a felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Etiam eu luctus.</p>
+              <p class="mt-4">I graduated from the University of Pittsburgh with a Bachelor of Arts in Film and Media Studies and English Writing and a Certificate in Digital Media.
+                In my media production internships, I learned how to collaborate with a team to create content in a fast-paced work environment.
+                In my writing classes, I learned how to articulate my imagination while listening and growing from critiques.</p>
+              <p class="mt-4">In a Composing Digital Media class, I found a perfect outlet for my creativity: designing and developing websites. I went into college thinking I wanted to write books, but I left college knowing that I wanted to write code. Now, I want to pursue a career in web design and development.
+                 I will bring the lessons and skills I learned along the way into my work as a web designer. </p>
             </div>
 
           </div>
@@ -82,8 +84,6 @@
 
 
       <!-- Main Resume Content -->
-      <!-- <div class="container"> -->
-
         <main>
 
 
@@ -96,26 +96,24 @@
                   <div class="row d-flex justify-content-between">
 
                     <!-- Degree Education Box -->
-                    <div class="col-12 col-md-6 school p-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">
+                    <div class="col-12 col-md-6 school p-5" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
                       <h3>University of Pittsburgh, Pittsburgh, PA</h3>
                       <h3><strong>Bachelor of Arts in Film and Media Studies</strong></h3>
                       <h3><strong>Bachelor of Arts in English Writing</strong></h3>
                       <h3>Fall 2015 - December 2018</h3>
                       <h4 class="mt-3">Certificate in Digital Media (18 Credit Program)</h4>
                       <h4>Summa Cum Laude | GPA: 3.9</h4>
-                      <!-- <h4>Studied Abroad: London, England (July 2017 – August 2017)</h4> -->
                     </div>
 
 
                     <!-- Relevant Coursework Education Box -->
-                    <div class="col-12 col-md-5 courses mt-3 mt-md-auto p-4" data-aos="fade-up" data-aos-delay="150" data-aos-duration="1000" data-aos-once="true">
+                    <div class="col-12 col-md-5 courses mt-3 mt-md-auto p-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
                       <h3 class="text-center">Relevant Coursework</h3>
                       <h5>From Pitt</h5>
                       <ul>
                         <li>Web Site Design and Development (A+)</li>
                         <li>Composing Digital Media (A)</li>
                         <li>Introduction to Computer Programming with Python (A)</li>
-                        <!-- <li>Digital Media Certificate (18 credit program focusing on visual literacy, mass communications, and digital media production)</li> -->
                       </ul>
                       <h5>Online Classes</h5>
                       <ul>
@@ -139,7 +137,7 @@
           <div class="row">
             <div class="col-12 col-lg-8">
               <div class="skills p-4 mb-5">
-                <h2 id="skills" data-aos="fade-in" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
+                <h2 id="skills" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
 
                 <!-- Rotated Background  -->
                 <div class="rotate">
@@ -153,7 +151,6 @@
                     <h3 class="pb-2">Other Creative Programs</h3>
                     <h4><span class="skill">Adobe Illustrator</span><span class="skill">Adobe Photoshop</span><span class="skill">Adobe Premiere Pro</span><span class="skill">Audacity</span><span class="skill">Microsoft Office Suite</span></h4>
                   </div>
-
                 </div>
 
               </div>
@@ -389,7 +386,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 
   <!-- Animate on Scroll JS -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
