--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
               <h3>Hi, I'm</h3>
               <h1>Jill Tyburski</h1>
               <p class="mt-4">I graduated from the University of Pittsburgh with a Bachelor of Arts in Film and Media Studies and English Writing and a Certificate in Digital Media.
-                In my media production internships, I learned how to collaborate with a team to create content in a fast-paced work environment.
+                In my media production internships, I learned how to collaborate to create content in fast-paced work environments. 
                 In my writing classes, I learned how to articulate my imagination while listening and growing from critiques.</p>
-              <p class="mt-4">In a Composing Digital Media class, I found a perfect outlet for my creativity: designing and developing websites. I went into college thinking I wanted to write books, but I left college knowing that I wanted to write code. Now, I want to pursue a career in web design and development.
-                 I will bring the lessons and skills I learned along the way into my work as a web designer. </p>
+              <p class="mt-4">I went into college thinking I wanted to write books, but I left college knowing that I wanted to write code.
+                In a Composing Digital Media class, I found a perfect outlet for my creativity: designing and developing websites.
+                Now, I want to pursue a career in web design and development.
+                I will bring the lessons and skills I learned along the way into my work as a web designer. </p>
             </div>
 
           </div>
