--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h3>Hi, I'm</h3>
               <h1>Jill Tyburski</h1>
               <p class="mt-4">I graduated from the University of Pittsburgh with a Bachelor of Arts in Film and Media Studies and English Writing and a Certificate in Digital Media.
-                In my media production internships, I learned how to collaborate to create content in fast-paced work environments. 
+                In my media production internships, I learned how to collaborate to create content in fast-paced work environments.
                 In my writing classes, I learned how to articulate my imagination while listening and growing from critiques.</p>
               <p class="mt-4">I went into college thinking I wanted to write books, but I left college knowing that I wanted to write code.
                 In a Composing Digital Media class, I found a perfect outlet for my creativity: designing and developing websites.
@@ -208,7 +208,7 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Leadership<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Leadership</h4>
-                        <li>Led all backstage movements of a live program</li>
+                        <li>Led all backstage movements during live shows, which included leading a small group of production assistants, </li>
                       </ul>
                     </div>
                   </div>
@@ -363,15 +363,42 @@
   <!-- Footer -->
 
 
+<div class="container-fluid no-margin">
   <footer>
-    <div class="contact pt-5" id="contact">
-      <p>Thank you for looking at the website version of my resume. I can be contacted through my <a href="https://www.linkedin.com/in/jill-tyburski-097367147/" target="_blank">LinkedIn</a> profile. </p>
+    <div class="contact pt-3" id="contact">
+      <div class="row d-flex align-items-center justify-content-center">
+        <div class="col-12 col-lg-4 justify-content-center pb-4 pb-lg-0">
+          <div class="LI-profile-badge d-none d-lg-block"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jill-tyburski-097367147"><a class="LI-simple-link" href='https://www.linkedin.com/in/jill-tyburski-097367147?trk=profile-badge'>Jill Tyburski</a></div>
+          <p class="pt-3 text-center text-lg-left">  I can be contacted through my <a href="https://www.linkedin.com/in/jill-tyburski-097367147/" target="_blank">LinkedIn</a> profile. </p>
+        </div>
+        <div class="col-12 col-lg-6">
+
+          <h3>Notes on Design Process</h3>
+
+          <p>I decided to write all of the HTML and CSS for this website so that I could proudly say that I created my resume website myself. I wanted my resume website to still have the clarity and readability of a traditional resume but with added touches of design and responsiveness that a website can offer.</p>
+
+          <p>I chose to use Bootstrap’s framework because its grid system is an efficient way to make a website responsive. It is likely that most viewers of this website would be on a desktop or larger screen, but I still wanted to make sure that it is easy to view on mobile or tablet as well.</p>
+
+          <p>I created the geometric background design for the header in Adobe Illustrator. I am inspired by geometric patterns I have seen on other websites and wanted to try to make my own version of it.</p>
+
+          <p>My goal for the work experience section is to highlight the main skills I took away from each job or internship I have had. I wrote jQuery code to allow for the viewer to hover and then click on the broader skill for each job/internship to reveal the specifics of what I did that is associated with each skill. </p>
+        </div>
+
+
+      </div>
+
 
     </div>
 
-
-
   </footer>
+</div>
+
+
+
+
+
+
+
 
 
 
@@ -388,6 +415,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+  <!-- LinkedIn Badge -->
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
   <!-- Animate on Scroll JS -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
