--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <!-- Animate on Scroll Library -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 
-
-  <!-- Fonts and Icons -->
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
+  <!-- Icons -->
   <script src="https://kit.fontawesome.com/a7455e0873.js" crossorigin="anonymous"></script>
+
 
   <!-- My Stylesheet -->
   <link rel="stylesheet" href="styles.css">
@@ -67,7 +68,7 @@
             <div class="intro">
               <h3>Hi, I'm</h3>
               <h1>Jill Tyburski</h1>
-              <p class="mt-4">I graduated from the University of Pittsburgh with a Bachelor of Arts in Film and Media Studies and English Writing and a Certificate in Digital Media.
+              <p class="mt-4">I graduated from the University of Pittsburgh with a Bachelor of Arts in Film/Media Studies and English Writing and a Certificate in Digital Media.
                 In my media production internships, I learned how to collaborate to create content in fast-paced work environments.
                 In my writing classes, I learned how to articulate my imagination while listening and growing from critiques.</p>
               <p class="mt-4">I went into college thinking I wanted to write books, but I left college knowing that I wanted to write code.
@@ -100,8 +101,9 @@
                     <!-- Degree Education Box -->
                     <div class="col-12 col-md-6 school p-5" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
                       <h3>University of Pittsburgh, Pittsburgh, PA</h3>
-                      <h3><strong>Bachelor of Arts in Film and Media Studies</strong></h3>
-                      <h3><strong>Bachelor of Arts in English Writing</strong></h3>
+                      <h3 class="d-none d-lg-block"><strong>Bachelor of Arts in Film and Media Studies</strong></h3>
+                      <h3 class="d-none d-lg-block"><strong>and English Writing</strong></h3>
+                      <h3 class="d-lg-none"><strong>Bachelor of Arts in Film and Media Studies and English Writing</strong></h3>
                       <h3>Fall 2015 - December 2018</h3>
                       <h4 class="mt-3">Certificate in Digital Media (18 Credit Program)</h4>
                       <h4>Summa Cum Laude | GPA: 3.9</h4>
@@ -139,7 +141,7 @@
           <div class="row">
             <div class="col-12 col-lg-8">
               <div class="skills p-4 mb-5">
-                <h2 id="skills" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
+                <h2 id="skills" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">Technical Skills</h2>
 
                 <!-- Rotated Background  -->
                 <div class="rotate">
@@ -176,7 +178,7 @@
                         <h3>Pitt Tonight, University of Pittsburgh</h3>
                       </div>
                       <div class="col-12 col-lg-3">
-                        <h3 class="text-md-right">Fall 2017 – Spring 2019</h3>
+                        <h3 class="text-md-right">Fall 2017 - Spring 2019</h3>
                       </div>
                     </div>
                     <div class="row">
@@ -192,7 +194,9 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Collaboration<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Collaboration</h4>
-                        <li>Contributed and listened during meetings with each department to design a unique show, plan promotional material, and discuss how to make the show better each month</li>
+                        <li>Worked together to create content and to market our show</li>
+                        <li>Contributed and listened during executive board meetings between department heads</li>
+                        <li>Valued differing perspectives from each department (marketing, writing, talent, and production)</li>
                       </ul>
 
                     </div>
@@ -200,7 +204,9 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Communication<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Communication</h4>
-                        <li>Promoted to Head of Stage Production because of strong communication skills with the Executive Producer and Production Assistants</li>
+                        <li>Spoke directly to Executive Producer through headset during live shows as the only line of communication between backstage and front of house</li>
+                        <li>Listened to all ideas, questions, and instructions</li>
+                        <li>Created physical copy of instructions (decksheet) in Microsoft Word after first going over directions verbally</li>
                       </ul>
 
                     </div>
@@ -208,7 +214,8 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Leadership<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Leadership</h4>
-                        <li>Led all backstage movements during live shows, which included leading a small group of production assistants, </li>
+                        <li>Communicated with backstage production assistants to ensure they knew what to do and answered questions as they came up</li>
+                        <li>Served as leader of backstage, which included communicating with my team, guests, the host, and producers, while setting a good example of how to handle the stressful backstage environment</li>
                       </ul>
                     </div>
                   </div>
@@ -240,7 +247,7 @@
                       <ul class="details s-hidden d-2 color2">
                         <h4 class="py-1 py-md-2">Creativity</h4>
                         <li>Told stories through video</li>
-                        <li>Planned video content from scratch with a small team of interns and turned an idea into a completed video within a one or two day deadline</li>
+                        <li>Planned video content from scratch with a small team of other interns and turned an idea into a completed video within a short deadline</li>
                       </ul>
                     </div>
                     <div class="col-md-4">
@@ -254,7 +261,8 @@
                       <h4 class="lesson s-open l-2 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Production Skills<span class="arrow a-2"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-2 color2">
                         <h4 class="py-1 py-md-2">Production Skills</h4>
-                        <li>Operated camera and audio equipment and edited multi-camera shows using Adobe Premiere Pro</li>
+                        <li>Operated camera and audio equipment and edited using Adobe Premiere Pro</li>
+                        <li>Learned how to set up multi-camera shots and how to use switchboard for broadcasting</li>
                       </ul>
                     </div>
                   </div>
@@ -269,7 +277,7 @@
                         <h3>Whitecoat Productions, London, England</h3>
                       </div>
                       <div class="col-12 col-lg-3">
-                        <h3 class="text-md-right">July 2017 – August 2017</h3>
+                        <h3 class="text-md-right">July - August 2017</h3>
                       </div>
                     </div>
                     <div class="row">
@@ -282,18 +290,18 @@
                   <!-- Job 3 Details -->
                   <div class="row justify-content-around mb-md-4">
                     <div class="col-md-6">
-                      <h4 class="lesson s-open l-3 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Problem Solving<span class="arrow a-3"><i class="fas fa-chevron-down"></i></span></h4>
+                      <h4 class="lesson s-open l-3 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Problem-Solving<span class="arrow a-3"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-3 color1">
-                        <h4 class="py-1 py-md-2">Problem Solving</h4>
-                        <li>Listened to everyone on production sets or in the office in order to then fulfill the quickly changing needs of fast-paced work environments</li>
+                        <h4 class="py-1 py-md-2">Problem-Solving</h4>
+                        <li>Listened to everyone in the office or on production sets in order to fulfill the quickly changing needs of fast-paced work environments</li>
+                        <li>Stayed alert in order to anticipate needs before a verbal request</li>
                       </ul>
                     </div>
                     <div class="col-md-6">
                       <h4 class="lesson s-open l-3 color1 pt-2 pt-md-4 pb-2 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Planning<span class="arrow a-3"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-3 color1">
                         <h4 class="py-1 py-md-2">Planning</h4>
-                        <li>Helped prepare for shooting days</li>
-
+                        <li>Helped prepare for shooting days by creating call sheets, scheduling catering, and prepping supplies</li>
                       </ul>
                     </div>
                   </div>
@@ -308,7 +316,7 @@
                         <h3>Pittsburgh Filmmakers Cinemas, Pittsburgh, PA</h3>
                       </div>
                       <div class="col-12 col-lg-3">
-                        <h3 class="text-md-right">January 2017 – July 2017</h3>
+                        <h3 class="text-md-right">January - July 2017</h3>
                       </div>
                     </div>
                     <div class="row">
@@ -324,21 +332,23 @@
                       <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Multitasking<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-4 color2">
                         <h4 class="py-1 py-md-2">Multitasking</h4>
-                        <li>Supervised concessions stand, sold tickets, digitally projected movie, communicated with customers, helped clean theater, and counted and recorded all sales nightly</li>
+                        <li>Supervised concession stand, sold tickets, digitally projected movie, communicated with customers and other employees, helped clean theater, and closed out and secured the cash register (all in the same shift)</li>
                       </ul>
                     </div>
                     <div class="col-md-4">
                       <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Teaching<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-4 color2">
                         <h4 class="py-1 py-md-2">Teaching</h4>
-                        <li>Wrote a Projection Manual to help train all future projectionists at the theater. Trained several new employees, ensuring they are set up for success during a transitional phase in management of the small theater</li>
+                        <li>Wrote a Projection Manual to help train all future projectionists at the theater</li>
+                        <li>Trained several new employees, ensuring they were set up for success during a transitional phase in management of the small theater</li>
                       </ul>
                     </div>
                     <div class="col-md-4">
                       <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Organization<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-4 color2">
                         <h4 class="py-1 py-md-2">Organization</h4>
-                        <li>Transferred accounting records from paper to Excel spreadsheet. Improved communication between other managers/projectionists by leaving specific notes after each night</li>
+                        <li>Transferred accounting records from paper to Excel spreadsheet</li>
+                        <li>Improved communication between other managers/projectionists by leaving specific notes after each night</li>
                       </ul>
                     </div>
                   </div>
@@ -363,35 +373,37 @@
   <!-- Footer -->
 
 
-<div class="container-fluid no-margin">
-  <footer>
-    <div class="contact pt-3" id="contact">
-      <div class="row d-flex align-items-center justify-content-center">
-        <div class="col-12 col-lg-4 justify-content-center pb-4 pb-lg-0">
-          <div class="LI-profile-badge d-none d-lg-block"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jill-tyburski-097367147"><a class="LI-simple-link" href='https://www.linkedin.com/in/jill-tyburski-097367147?trk=profile-badge'>Jill Tyburski</a></div>
-          <p class="pt-3 text-center text-lg-left">  I can be contacted through my <a href="https://www.linkedin.com/in/jill-tyburski-097367147/" target="_blank">LinkedIn</a> profile. </p>
-        </div>
-        <div class="col-12 col-lg-6">
+  <div class="container-fluid no-margin">
 
-          <h3>Notes on Design Process</h3>
+    <footer>
+      <div class="contact pt-3" id="contact">
+        <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-12 col-lg-4 justify-content-center pb-4 pb-lg-0">
+            <div class="LI-profile-badge d-none d-lg-block"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="jill-tyburski-097367147"><a class="LI-simple-link" href='https://www.linkedin.com/in/jill-tyburski-097367147?trk=profile-badge'>Jill Tyburski</a></div>
+            <p class="pt-3 text-center text-lg-left">  I can be contacted through my <a href="https://www.linkedin.com/in/jill-tyburski-097367147/" target="_blank">LinkedIn</a> profile. </p>
+          </div>
+          <div class="col-12 col-lg-6">
 
-          <p>I decided to write all of the HTML and CSS for this website so that I could proudly say that I created my resume website myself. I wanted my resume website to still have the clarity and readability of a traditional resume but with added touches of design and responsiveness that a website can offer.</p>
+            <h3>Notes on Design Process</h3>
 
-          <p>I chose to use Bootstrap’s framework because its grid system is an efficient way to make a website responsive. It is likely that most viewers of this website would be on a desktop or larger screen, but I still wanted to make sure that it is easy to view on mobile or tablet as well.</p>
+            <p>I decided to write all of the HTML and CSS for this website so that I could proudly say that I created my resume website myself. I want my resume website to still have the clarity and readability of a traditional resume but with added touches of design and responsiveness that a website can offer.</p>
 
-          <p>I created the geometric background design for the header in Adobe Illustrator. I am inspired by geometric patterns I have seen on other websites and wanted to try to make my own version of it.</p>
+            <p>I chose to use Bootstrap’s framework because its grid system is an efficient way to make a website responsive. It is likely that most viewers of this website would be on a desktop or larger screen, but I still wanted to make sure that it is easy to view on mobile or tablet displays as well.</p>
 
-          <p>My goal for the work experience section is to highlight the main skills I took away from each job or internship I have had. I wrote jQuery code to allow for the viewer to hover and then click on the broader skill for each job/internship to reveal the specifics of what I did that is associated with each skill. </p>
+            <p>I created the geometric background design for the header in Adobe Illustrator. I am inspired by geometric patterns I have seen on other websites and wanted to try to make my own version of it.</p>
+
+            <p>My goal for the work experience section is to highlight the main skills I gained from various jobs I have had. I utilized jQuery to allow for the viewer to hover and click on the broader skill for each job to reveal more specific examples. </p>
+          </div>
+
+
         </div>
 
 
       </div>
 
+    </footer>
 
-    </div>
-
-  </footer>
-</div>
+  </div>
 
 
 
