Upload Resume Files
another revision of content wording. final for now!!!

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <div class="text">
                     <h3 class="pb-2">Web Design and Development</h3>
                     <h4>Proficient: <span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">Bootstrap</span><span class="skill">Atom</span><span class="skill">Github</span></h4>
-                    <h4>Beginner: <span class="skill">JavaScript</span><span class="skill">jQuery</span><span class="skill">Python</span><span class="skill">Word Press</span><span class="skill">Adobe XD</span></h4>
+                    <h4>Beginner: <span class="skill">JavaScript</span><span class="skill">jQuery</span><span class="skill">Python</span><span class="skill">WordPress</span><span class="skill">Adobe XD</span></h4>
 
                     <h3 class="pb-2">Other Creative Programs</h3>
                     <h4><span class="skill">Adobe Illustrator</span><span class="skill">Adobe Photoshop</span><span class="skill">Adobe Premiere Pro</span><span class="skill">Audacity</span><span class="skill">Microsoft Office Suite</span></h4>
@@ -194,7 +194,7 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="50" data-aos-once="true">Collaboration<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Collaboration</h4>
-                        <li>Worked together to create content and to market our show</li>
+                        <li>Worked as a team to create content and to market our show</li>
                         <li>Contributed and listened during executive board meetings between department heads</li>
                         <li>Valued differing perspectives from each department (marketing, writing, talent, and production)</li>
                       </ul>
@@ -204,9 +204,9 @@
                       <h4 class="lesson s-open l-1 color1 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="100" data-aos-once="true">Communication<span class="arrow a-1"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-1 color1">
                         <h4 class="py-1 py-md-2">Communication</h4>
-                        <li>Spoke directly to Executive Producer through headset during live shows as the only line of communication between backstage and front of house</li>
+                        <li>Spoke directly to the Executive Producer through headset during live shows as the only line of communication between backstage and front of house</li>
                         <li>Listened to all ideas, questions, and instructions</li>
-                        <li>Created physical copy of instructions (decksheet) in Microsoft Word after first going over directions verbally</li>
+                        <li>Created physical copies of instructions (decksheet) for the production assistants after first going over directions verbally</li>
                       </ul>
 
                     </div>
@@ -347,7 +347,7 @@
                       <h4 class="lesson s-open l-4 color2 pt-2 pt-md-4 pb-1 pb-md-2" data-aos="flip-up" data-aos-delay="150" data-aos-once="true">Organization<span class="arrow a-4"><i class="fas fa-chevron-down"></i></span></h4>
                       <ul class="details s-hidden d-4 color2">
                         <h4 class="py-1 py-md-2">Organization</h4>
-                        <li>Transferred accounting records from paper to Excel spreadsheet</li>
+                        <li>Transferred accounting records from paper to an Excel spreadsheet</li>
                         <li>Improved communication between other managers/projectionists by leaving specific notes after each night</li>
                       </ul>
                     </div>
@@ -388,11 +388,12 @@
 
             <p>I decided to write all of the HTML and CSS for this website so that I could proudly say that I created my resume website myself. I want my resume website to still have the clarity and readability of a traditional resume but with added touches of design and responsiveness that a website can offer.</p>
 
-            <p>I chose to use Bootstrap’s framework because its grid system is an efficient way to make a website responsive. It is likely that most viewers of this website would be on a desktop or larger screen, but I still wanted to make sure that it is easy to view on mobile or tablet displays as well.</p>
+            <p>I chose to use Bootstrap’s framework because its grid system is an efficient way to make a website responsive. It is likely that most viewers of this website will be on a desktop or larger laptop screen, but I still wanted to make sure that it is easy to view on mobile or tablet displays as well.</p>
 
             <p>I created the geometric background design for the header in Adobe Illustrator. I am inspired by geometric patterns I have seen on other websites and wanted to try to make my own version of it.</p>
 
-            <p>My goal for the work experience section is to highlight the main skills I gained from various jobs I have had. I utilized jQuery to allow for the viewer to hover and click on the broader skill for each job to reveal more specific examples. </p>
+            <p>My goal for the "Work Experience" section is to highlight the main skills I gained from various jobs I have had. I utilized jQuery to allow the viewer to hover and click on the broader skill for each job to reveal more specific examples of how that skill was used.</p>
+            
           </div>
 
 
@@ -404,9 +405,6 @@
     </footer>
 
   </div>
-
-
-
 
 
 
@@ -435,6 +433,7 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <script>
+
     //initiate animate on scroll
     AOS.init();
 
